style: fix text-overflow effect

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -197,6 +197,7 @@ select:focus {
 }
 
 .info-class {
+  width: 100%;
   position: absolute;
   top: 0;
   z-index: 1;
